--- a/client/src/style/react-calendar.css
+++ b/client/src/style/react-calendar.css
@@ -1,4 +1,5 @@
 .react-calendar {
+  padding: 10px;
   width: 100%;
   max-width: 100%;
   background: #f2f2f2;
@@ -8,7 +9,7 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   font-family: Arial, Helvetica, sans-serif;
-  line-height: 10px;
+  /* line-height: 10px; */
 }
 
 .react-calendar--doubleView {
@@ -103,7 +104,7 @@
 
 .react-calendar__tile {
   max-width: 100%;
-  padding: 25px;
+  padding: 20px;
   background: none;
   text-align: center;
   line-height: 16px;
@@ -130,8 +131,9 @@
 }
 
 .react-calendar__tile--now {
-  background-color: #ff6000;
-  border-radius: 100px;
+  background-color: orangeRed;
+  color: white;
+  border-radius: 100%;
 }
 
 .react-calendar__tile--now:enabled:hover,
@@ -149,13 +151,13 @@
 }
 
 .react-calendar__tile--active {
-  background: #006edc;
+  background: orange;
   color: white;
 }
 
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #1087ff;
+  background: orangered;
 }
 
 .react-calendar--selectRange .react-calendar__tile--hover {
