--- a/client/src/style/tables.css
+++ b/client/src/style/tables.css
@@ -17,22 +17,22 @@ td {
 
 .custom-table .p-datatable-thead > tr > th {
   background-color: #1a1a1a; /* Darker header */
-  color: white;
+  color: #dadada;
 }
 
 .custom-table .p-datatable-tbody > tr {
   background-color: #1a1a1a; /* Darker header */
-  border: white;
-  color: white;
+  border: #dadada;
+  color: #dadada;
 }
 
 .custom-table .p-datatable-bodyRow {
-  border-top: white;
+  border-top: #dadada;
 }
 
 .custom-paginator {
   background-color: #1a1a1a;
-  color: white;
+  color: #dadada;
   padding: 1rem;
   display: flex;
   justify-content: center;
